# 3D-Cellular-Automata

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  compile_commands.json  map.txt
include/: App.h  Rule.h  Shader.h  world.h  world3d.h
src/: 3D_Cellular_Automata.cpp
src/App/: App.cpp
src/Rule/: Rule.cpp
src/Shader/: Shader.cpp
src/shaders/: cube_fs.glsl  cube_vs.glsl  epoch_compute.glsl  gen_pos_compute.glsl
src/world/: world.cpp
src/world3d/: world3d.cc  world3d.cpp
